@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine_encoder.c,v 1.9 2003/12/05 15:54:59 f1rmb Exp $
+ * $Id: xine_encoder.c,v 1.10 2004/01/04 22:26:29 mroi Exp $
  */
  
 /* mpeg encoders for the dxr3 video out plugin. */
@@ -197,15 +197,6 @@ static int lavc_on_update_format(dxr3_driver_t *drv, dxr3_frame_t *frame)
   if (!this->ffmpeg_buffer) {
     printf("dxr3_mpeg_encoder: Couldn't allocate temp buffer for mpeg data\n");
     return 0;
-  }
-
-  /* set the dxr3 playmode */
-  if (drv->enhanced_mode) {
-    em8300_register_t regs;
-    regs.microcode_register = 1;
-    regs.reg = 0;
-    regs.val = MVCOMMAND_SYNC;
-    ioctl(drv->fd_control, EM8300_IOCTL_WRITEREG, &regs);
   }
 
   return 1;
